perf: apply async parallel processing to file upload